--- a/src/content/posts/articles/sune-deity.mdx
+++ b/src/content/posts/articles/sune-deity.mdx
@@ -60,13 +60,13 @@ cover: '~assets/covers/sune-symbol.jpg'
 
 Когда такие свечения появляются вокруг предметов, они обычно являются сильным намеком смертным на то, что нужно что-то сделать (например, подобрать и использовать или взять предмет). Суни часто посылает свечение, чтобы оно кружилось вокруг предмета, а затем свечение целенаправленно перемещается в знак того, что нужно сделать с этим предметом, или куда его отнести, или кому отдать.
 
-Суни часто посылает сообщения «Я одобряю» в виде бессловесных всплесков страстных чувств, красных свечений в сознании смертных и даже воспоминаний о моментах любви и страсти в прошлой жизни, когда совершаются или обдумываются и обсуждаются действия. Если она не одобряет, то вместо этого посылает видения своего прекрасного лица, смотрящего на вас с холодным неодобрением и исчезающего из рубиново-красной жизни в холодный, запретный белый мрамор, иногда даже с инеем, плесенью или трещинами, появляющимися на нем в знак крайнего недовольства или несогласия. Как и все божества, она посылает смертным, в частности своим верным последователям, более длинные и подробные (и часто более загадочные) послания с наставлениями в их снах. Она часто предваряет и сопровождает эти сны-видения своим летящим, парящим лицом, огненные волосы мягко развеваются вокруг него, когда он летит к вам, и растворяется в видениях любовных отношений и страсти, которые всегда отклоняются от явной плотскости в сияющие образы вещей, которые смертный считает красивыми (от танцев до стеклянных безделушек, природных пейзажей или оперения птиц до ремесленных изделий, таких как мечи, вазы, платья или короны).
+Суни часто посылает сообщения «Я одобряю» в виде бессловесных всплесков страстных чувств, красных свечений в сознании смертных и даже воспоминаний о моментах любви и страсти в прошлой жизни, когда совершаются или обдумываются и обсуждаются действия. Если она не одобряет, то вместо этого посылает видения своего прекрасного лица, смотрящего на вас с холодным неодобрением и исчезающего из рубиново-красной жизни в холодный, запретный белый мрамор, иногда даже с инеем, плесенью или трещинами, появляющимися на нем в знак крайнего недовольства или несогласия. Как и все божества, она посылает смертным, в частности своим верным последователям, более длинные и подробные (и часто более загадочные) послания с наставлениями в их снах. Она часто предваряет и сопровождает эти сны-видения своим летящим, парящим лицом, огненные волосы мягко развеваются вокруг него, когда оно летит к вам, и растворяется в видениях любовных отношений и страсти, которые всегда отклоняются от явной плотскости в сияющие образы вещей, которые смертный считает красивыми (от танцев до стеклянных безделушек, природных пейзажей или оперения птиц до ремесленных изделий, таких как мечи, вазы, платья или короны).
 
 ## Раннее поклонение Суни
 
-Когда Незерил достиг своего расцвета, богиней красоты для нетерезов была Селун.
+Когда Незерил достиг своего расцвета, богиней красоты для нетерезов была Селуне.
 
-Суни также входила в число их божеств, но ее поклонение было в Незериле лишь зарождающимся «культом», популярным среди «низких» нетерезов (рабочих) и гораздо менее популярным среди могущественных. Селун была богиней красоты, а Суни - богиней чувственности (не только секса; «чувственность» в данном случае означала тактильное удовольствие и оценку текстуры и внешнего вида всех вещей; нетерезы молились Суни, чтобы она сделала грубые вещи гладкими, тупое оружие и инструменты острыми, а вещи с изъянами и дефектами выглядели превосходно и без помарок). Суни была «Несущей Вознесение» или «Леди Вознесение».
+Суни также входила в число их божеств, но ее поклонение было в Незериле лишь зарождающимся «культом», популярным среди «низких» нетерезов (рабочих) и гораздо менее популярным среди могущественных. Селуне была богиней красоты, а Суни - богиней чувственности (не только секса; «чувственность» в данном случае означала тактильное удовольствие и оценку текстуры и внешнего вида всех вещей; нетерезы молились Суни, чтобы она сделала грубые вещи гладкими, тупое оружие и инструменты острыми, а вещи с изъянами и дефектами выглядели превосходно и без помарок). Суни была «Несущей Вознесение» или «Леди Вознесение».
 
 Маловероятно, что Суни - пришелец из другого мира или плана. Для ее духовенства и всех ныне живущих смертных Суни «всегда была здесь», и даже во времена Незерильской империи не было ощущения, что она «откуда-то из другого мира». Некоторые смертные считают, что почти все божества - вознесенные смертные (за исключением Селуны и Шара - и любых других божеств, которых верующие считают «первыми», «старшими» или «иными»), так что из этого следует, что Суни - вознесенная смертная. Однако никаких сведений о ее земной жизни, о том, когда, где и почему она вознеслась, не сохранилось, если они вообще существовали.
 
